--- a/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
@@ -46,6 +46,15 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                <DataGridTextColumn Header="Специальность" Width="2*"
+                                    Binding="{Binding Path=SpecialityName}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Телефон" Width="*"
                                     Binding="{Binding Path=Phone}">
                     <DataGridTextColumn.ElementStyle>
