--- a/CRMPhone/Dialogs/Admins/SpecialityAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/SpecialityAddOrEditDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CRMPhone.Dialogs.Admins.ServiceCompanyAddOrEditDialog"
+﻿<Window x:Class="CRMPhone.Dialogs.Admins.SpecialityAddOrEditDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CRMPhone.Dialogs"
+        xmlns:local="clr-namespace:CRMPhone.Dialogs.Admins"
         mc:Ignorable="d"
         Title="Управляющая компания" Height="120" Width="420" MinWidth ="420" MinHeight="120"
         WindowStartupLocation="CenterOwner"
@@ -14,9 +14,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-    <DockPanel Grid.Row="1">
+        <DockPanel Grid.Row="1">
             <TextBlock Margin="5" VerticalAlignment="Center" Text="Название:"/>
-            <TextBox Margin="5" HorizontalAlignment="Right" Width="300" MaxLength="255" TextWrapping="Wrap" Text="{Binding ServiceName}">
+            <TextBox Margin="5" HorizontalAlignment="Right" Width="300" MaxLength="255" TextWrapping="Wrap" Text="{Binding SpecialityName}">
             </TextBox>
         </DockPanel>
         <StackPanel Grid.Row="2" HorizontalAlignment="Right">
