--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -106,6 +106,8 @@
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Статус</Button>
                     <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanAddRating}" Command="{Binding ElementName=RequestGrid, Path=DataContext.RatingCommand}"
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Оценка качества</Button>
+                    <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.SetWorkingTimesCommand}"
+             CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Период выполнения</Button>
                     <!--<Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeNoteCommand}"
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Примечание</Button>-->
                 </StackPanel>
