--- a/CRMPhone/Dialogs/ChangeStatusDialog.xaml
+++ b/CRMPhone/Dialogs/ChangeStatusDialog.xaml
@@ -3,10 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CRMPhone"
-        xmlns:crmPhone="clr-namespace:CRMPhone"
+        xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance crmPhone:ChangeStatusDialogViewModel}"
+        d:DataContext="{d:DesignInstance viewModel:ChangeStatusDialogViewModel}"
         Title="Исполнитель заявки" Height="300" Width="420" MinWidth ="420" MinHeight="300"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow">
