--- a/CRMPhone/Dialogs/ChangeExecuteDateDialog.xaml
+++ b/CRMPhone/Dialogs/ChangeExecuteDateDialog.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CRMPhone"
+        xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:ChangeExecuteDateDialogViewModel}"
+        d:DataContext="{d:DesignInstance viewModel:ChangeExecuteDateDialogViewModel}"
         Title="Дата и время выполнения заявки" Height="300" Width="700" MinWidth ="700" MinHeight="300"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow">
