--- a/CRMPhone/Dialogs/RequestDialog.xaml
+++ b/CRMPhone/Dialogs/RequestDialog.xaml
@@ -6,12 +6,16 @@
         xmlns:crmPhone="clr-namespace:CRMPhone"
         xmlns:controls="clr-namespace:CRMPhone.Controls"
         mc:Ignorable="d"
-        Title="Заявка" MinHeight="740" MaxHeight="740" MinWidth ="1000" MaxWidth="1000" Height="740" Width="1000"
+        Title="Заявка" MinHeight="900" MaxHeight="900" MinWidth ="1000" MaxWidth="1000" Height="900" Width="1000"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         FontSize="14"
         d:DataContext="{d:DesignInstance crmPhone:RequestDialogViewModel}">
-    
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
+    </Window.Resources>
+
+
     <Grid Name ="RequestGrid" >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,7 +26,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <WrapPanel Margin="5" IsEnabled ="{Binding CanEdit}" Grid.Row="0">
+        <StackPanel Grid.Row="0">
+        <WrapPanel Margin="5" IsEnabled ="{Binding CanEdit}" >
             <TextBlock Margin="3" VerticalAlignment="Center" Text="город:"/>
             <ComboBox Margin="3" Width="100" TabIndex ="1" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCity}" ItemsSource="{Binding CityList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
             <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
@@ -36,6 +41,99 @@
             <TextBlock Margin="3" VerticalAlignment="Center" Text="этаж:"/>
             <TextBox Margin="3" Width="45" TabIndex ="7" Text="{Binding Path=Floor}" />
         </WrapPanel>
+            <StackPanel Visibility ="{Binding CanEdit, Converter={StaticResource BooleanToVisibility}}">
+            <TextBlock Margin ="3" Text="История заявок по адресу за последние 30 дней:"/>
+                <DataGrid Name="OldRequestsGrid"
+                          AutoGenerateColumns="False"
+                          ItemsSource="{Binding Path=AddressRequestList}"
+                          SelectionMode="Single"
+                          SelectionUnit="FullRow"
+                          IsReadOnly="True"
+                          HorizontalScrollBarVisibility="Auto"
+                          VerticalScrollBarVisibility="Auto" Height="140">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="№" Width="60"
+                                            Binding="{Binding Path=Id}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Статус" Width="80"
+                                            Binding="{Binding Path=Status}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Дата заявки" Width="100"
+                                            Binding="{Binding Path=CreateTime, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Услуга" Width="100"
+                                            Binding="{Binding Path=ParentService}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Причина" Width="160"
+                                            Binding="{Binding Path=Service}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Примечание" Width="160"
+                                            Binding="{Binding Path=Description}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Исполнитель" Width="120"
+                                            Binding="{Binding Path=Worker.ShortName}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Дата исполнения" Width="110"
+                                            Binding="{Binding Path=ExecuteTime, StringFormat='{}{0:dd.MM.yyyy}'}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="Margin" Value="3"/>
+
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+            </StackPanel>
+        </StackPanel>
         <StackPanel Grid.Row="1">
             <TextBlock Margin ="3" Text="Контактные телефоны:"/>
             <Button Margin ="3" Content="Добавить" Width="120" Command="{Binding AddContactCommand}" HorizontalAlignment="Left"/>
@@ -123,7 +221,7 @@
                 </ListBox.ItemContainerStyle>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <controls:RequestItem>
+                        <controls:RequestItem >
 
                         </controls:RequestItem>
                     </DataTemplate>
